docker/rancher/nacos-no-pvc.yaml
###使用自建数据库；使用Ingress发布配置后台###
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: nacos
  labels:
    app: nacos-headless
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
spec:
  serviceName: nacos-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos-headless
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8snacos
          imagePullPolicy: Always
          image: nacos/nacos-server:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 7848
              name: rpc
          volumeMounts:
            - name: plguindir
              mountPath: /home/nacos/plugins/peer-finder
            - name: datadir
              mountPath: /home/nacos/data
            - name: logdir
              mountPath: /home/nacos/logs
      volumes:
      - hostPath:
          path: /home/nacos/plugins/peer-finder
          type: ""
        name: vol-plguindir
      - hostPath:
          path: /home/nacos/data
          type: ""
        name: vol-datadir
      - hostPath:
          path: /home/nacos/logs
          type: ""
        name: vol-logdir
  selector:
    matchLabels:
      app: nacos



---
# ------------------- App Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
  namespace: nacos
  annotations:
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: backend
    nginx.ingress.kubernetes.io/load-balancer-method: drr


spec:
  selector:
    app: nacos
  ports:
  - name: web
    port: 80
    targetPort: 8848
---
# ------------------- App Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-web
  namespace: nacos

spec:
  rules:
  - host: k8s-slb.biaoguoworks.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nacos-service
          servicePort: web
